--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,11 @@ body {
 }
 
 /* Customize container */
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
     .container {
         max-width: 730px;
     }
-}
+}*/
 
 .container-narrow>hr {
     margin: 30px 0;
